Fixed medium width my library list not fit into screen

--- a/src/styles/sass/ads-sass/layout.scss
+++ b/src/styles/sass/ads-sass/layout.scss
@@ -56,7 +56,9 @@ body {
       &-content {
         transition: opacity 0.6s ease, transform 0.6s ease;
         &.full-width {
-          margin-left: -300px;
+          // margin-left: -300px;
+          display: block;
+          margin-left: 0;
         }
       }
     }
